# 3d-check

./: .gitignore  3d_model.in  CMakeLists.txt  Program.cs  README.md  isMatrixDiagonal.ipynb  kernel.cl  main.cpp
OpenCL/: CMakeLists.txt
OpenCLlib/: CMakeLists.txt
cpp/: CMakeLists.txt
explonatory/: .gitignore  math.md
py/point-cloud/: .gitignore  README.md  point-cloud.pyproj  point-cloud.sln  point_cloud.py  point_cloud_generator.py  requirements.txt  tests.py
